getting chrome browser

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: java
 addons: # get google-chrome-stable
   chrome: stable
 script:
-  - whereis google-chrome-stable
+  - which google-chrome-stable
