--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: 8u171-jdk-node-browsers
+      - image: circleci/openjdk:8u171-jdk-node-browsers
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
