added test, refactored to use streams

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 browser=chrome
 baseurl=https://www.amazon.co.uk/
 timeout=15
+department.homeGardenPetsDIY.locator=[data-nav-panelkey=HomeGardenPetsAndDIYPanel]
+productCategory.kitchenHomeApplicances.locator=//*[text()='Kitchen & Home Appliances']
+subdepartments.kitchenHomeAplliances=[id*=categoryTilesSoftlines_]>.a-row>div
